--- a/LeetCode_58_Length_of_Last_Word.ipynb
+++ b/LeetCode_58_Length_of_Last_Word.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPkd5awaj8eakfxeaUXlgxL",
+      "authorship_tag": "ABX9TyOdlZocITG94WaOmvZnMPk8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,18 +27,55 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "class Solution:\n",
-        "    def lengthOfLastWord(self, s: str) -> int:\n",
-        "        words = s.split()\n",
-        "        return len(words[-1])"
+        "1. Two Sum\n",
+        "\n",
+        "Given an array of integers nums and an integer target, return indices of the two numbers such that they add up to target.\n",
+        "\n",
+        "You may assume that each input would have exactly one solution, and you may not use the same element twice.\n",
+        "\n",
+        "You can return the answer in any order."
       ],
       "metadata": {
-        "id": "L_oKA6nimL0h"
+        "id": "bDRVBLGWdtja"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def two_sum(nums, target):\n",
+        "  seen = {}\n",
+        "  for i, num in enumerate(nums):\n",
+        "    compile = target - num\n",
+        "    if comp in seen:\n",
+        "      return [seen[comp], i]\n",
+        "    seen[num] = i\n",
+        "\n",
+        "  return []\n",
+        "\n",
+        "nums = [2, 7, 11, 15]\n",
+        "target = 9\n",
+        "indixes = two_sum(nums, target)\n",
+        "print(indixes)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NAGSuEW3daYB",
+        "outputId": "b654df58-1625-4c08-fe68-b699d9265690"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0, 1]\n"
+          ]
+        }
+      ]
     }
   ]
 }
