--- a/LeetCode_Practice.ipynb
+++ b/LeetCode_Practice.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN7MmLSHZNxdHVCKEet8+Zf",
+      "authorship_tag": "ABX9TyPvl0KbqTq0pzB/8j5Q0JDA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -80,7 +80,7 @@
         "id": "ryQudVh-gMO8",
         "outputId": "d36be542-9e66-4495-f4f4-67531df848a4"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -113,6 +113,68 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def roman_to_integer(roman):\n",
+        "    \"\"\"Converts a Roman numeral string to its corresponding integer.\n",
+        "\n",
+        "    Args:\n",
+        "        roman: The Roman numeral string to convert (e.g., \"MCMXIV\").\n",
+        "\n",
+        "    Returns:\n",
+        "        The integer equivalent of the given Roman numeral.\n",
+        "\n",
+        "    Raises:\n",
+        "        ValueError: If the input string is invalid or exceeds the supported\n",
+        "                    range (1 to 3999).\n",
+        "    \"\"\"\n",
+        "\n",
+        "    roman_map = {\n",
+        "        \"I\": 1,\n",
+        "        \"V\": 5,\n",
+        "        \"X\": 10,\n",
+        "        \"L\": 50,\n",
+        "        \"C\": 100,\n",
+        "        \"D\": 500,\n",
+        "        \"M\": 1000\n",
+        "    }\n",
+        "\n",
+        "    decimal_value = 0\n",
+        "    prev_value = 0\n",
+        "\n",
+        "    for symbol in roman:\n",
+        "        if symbol not in roman_map:\n",
+        "            raise ValueError(\"Invalid Roman numeral symbol: {}\".format(symbol))\n",
+        "\n",
+        "        value = roman_map[symbol]\n",
+        "\n",
+        "        if value > prev_value:  # Check if subtraction applies\n",
+        "            if prev_value in (1, 10, 100):  # Only subtract I, X, C before their next multiple\n",
+        "                decimal_value -= 2 * prev_value\n",
+        "            else:\n",
+        "                raise ValueError(\"Invalid Roman numeral combination\")\n",
+        "        else:\n",
+        "            decimal_value += value\n",
+        "\n",
+        "        prev_value = value\n",
+        "\n",
+        "    if decimal_value > 3999:\n",
+        "        raise ValueError(\"Roman numeral value exceeds supported range (1 to 3999)\")\n",
+        "\n",
+        "    return decimal_value\n",
+        "\n",
+        "# Example usage\n",
+        "roman_numeral = \"MCMXIV\"\n",
+        "integer_value = roman_to_integer(roman_numeral)\n",
+        "print(f\"The integer equivalent of {roman_numeral} is: {integer_value}\")\n"
+      ],
+      "metadata": {
+        "id": "8YKnH3xOnHPF"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
